# Projects

./: .gitignore  README.md
AI-Content-Repurposing-System-main/: .gitignore  README.md
AI-Google-Meet-Assistant-main/: .env.example  .gitignore  README.md  requirements.txt
AI-News-Digest-main/: .gitignore  README.md  agents.py  app.py  ingestion.py  main.py  orchestrator.py  requirements.txt  summary_agent.py
AI-Task-Execution-Agent-master/: .env.example  .gitignore  .watchfilesignore  README.md  requirements.txt
AI_Blog_Generator-main/: .gitignore  README.md  frontend.py  main.py  requirements.txt
AI_Debate_System-main/: .env.example  .gitignore  README.md
AI_Workout_Planner-main/: .env.example  .gitignore  README.md  docker-compose.yml
AMAZONS/: .env.example  .gitignore  README.md  config_loader.py  requirements.txt  run.py  setup.sh  test_keywords.sh
Asktube-master/: .gitignore  README.md  app.py  requirements.txt
Dental-Clinic/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
LINKEDIN/: .gitignore  README.md  extract_emails.py  extract_emails_from_posts.py  extracted_emails.json  linkedin_login.py  scrape_linkedin_posts.py
Password_Generator-main/: README.md  index.html  package-lock.json  package.json
QR_Code_Generator-main/: .gitignore  README.md  (+4 more)
webresearch/: .gitignore  README.md  pyproject.toml
webresearch/webresearch/: __main__.py  cache.py  export.py  extract.py  fetch.py  install.py  report.py  search.py  skill-aider.md  skill-codex.md  skill-copilot.md  skill-opencode.md  skill.md  synthesize.py
(+627 files in other folders)
